--- a/end-to-end-etl/pyproject.toml
+++ b/end-to-end-etl/pyproject.toml
@@ -13,7 +13,7 @@ python = "^3.11"
 boto3 = "^1.26.160"
 botocore = "^1.29.163"
 mysql-connector-python = "^8.0.33"
-python-dotenv = "^1.0.0"7
+python-dotenv = "^1.0.0"
 
 
 [tool.poetry.group.dev.dependencies]
